--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,7 +18,7 @@ jobs:
       run: sudo snap install --classic go 
     - name: Compile
       shell: bash
-      run: go build .
+      run: go mod download github.com/MadLadSquad/discordgo && go build .
   Windows:
     runs-on: windows-latest
     steps:
