--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -35,6 +35,6 @@ jobs:
         with:
           go-version: "stable"
       - name: Get dependencies
-        run: brew install go@1.21 || brew link --overwrite go
+        run: brew install go || brew link --overwrite go
       - name: Compile
         run: sh ci.sh
